Ajustes de data JS

--- a/views/teachers/index.njk
+++ b/views/teachers/index.njk
@@ -31,7 +31,9 @@
 
                 <div class="item">
                     <div>Acompanhamento</div>
-                    <div>Matematica</div>
+                    <div>
+                        <span>Matematica</span>    
+                    </div>
                 </div>
 
                 <div class="item">
