--- a/views/teachers/create.njk
+++ b/views/teachers/create.njk
@@ -6,55 +6,7 @@
         <section class="details">
             <h3>Novo Professor</h3>
 
-                <div class="item">
-                    <div>URL Foto</div>
-                    <div>
-                        <input type="url" name="avatar_url" placeholder="http://">
-                    </div>
-                </div>
-
-                <div class="item">
-                    <div>Professor</div>
-                    <div>
-                        <input type="text" name="name" placeholder="Nome do instrutor">
-                    </div>
-                </div>
-
-                <div class="item">
-                    <div>Data de nascimento</div>
-                    <div>
-                        <input type="date" name="birth">
-                    </div>
-                </div>
-
-                <div class="item">
-                    <div>Escolaridade</div>
-                    <div>
-                        <select name="select" class="select">
-                            <option value="Ensino Medio Completo">Ensino medio completo</option>
-                            <option value="Ensino Superior Completo">Ensiono superior completo</option>
-                            <option value="Mestrado">Mestrado</option>
-                            <option value="Doutorado">Doutorado</option>
-                        </select>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <div>Aulas</div>
-                    <div>
-                        <span><input type="radio" name="aula" value="P" checked="checked">Presencial</span>
-                        <span><input type="radio" name="aula" value="D">À distância</span>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <div>Área de atuação</div>
-                    <div>
-                        <input type="text" name="services" placeholder="Aulas apto a lecionar">
-                    </div>
-                </div>
-                <button type="submit">Salvar</button>
+            {%include 'teachers/fields.njk'%}
         </section>
     </form>
 {% endblock content %}
-
