--- a/views/layout.njk
+++ b/views/layout.njk
@@ -1,7 +1,7 @@
 <html>
     <head>
         {% block head %}
-            <title>Gym Manager</title>
+            <title>Private school</title>
         {% endblock %}
         <link rel="stylesheet" href="/styles.css">
     </head>
@@ -9,8 +9,8 @@
     <body>
         <header>
             <div class="links">
-                <a href="/" class="active">Instructors</a>
-                <a href="/members">Members</a>                                    
+                <a href="/" class="active">Teachers</a>
+                <a href="/members">Students</a>                                    
             </div>
         </header>
 
