--- a/views/teachers/show.njk
+++ b/views/teachers/show.njk
@@ -47,7 +47,7 @@
                     <div>Desde</div>
                     <div>{{teacher.created_at}}</div>
                 </div>
-
+                <a href="/teachers/{{teacher.id}}/edit" class="button">Editar</a>
             </section>
         </div>
     {% endblock content %}
