--- a/views/teachers/index.njk
+++ b/views/teachers/index.njk
@@ -1,47 +1,29 @@
 {% extends "layout.njk" %}
 
 {% block content %}
-    <div class="card">
-        <section class="avatar" style="background: url(https://source.unsplash.com/collection/1287676/500x500) no-repeat center center / cover"></section>
-        <section class="details">
-            <h3>Detalhes</h3>
-
-                <div class="item">
-                    <div>Professor</div>
-                    <div>Mauro Silva</div>
-                </div>
-
-                <div class="item">
-                    <div>Idade</div>
-                    <div>34</div>
-                </div>
-
-                <div class="item">
-                    <div>Escolaridade</div>
-                    <div>Doutorado</div>
-                </div>
-
-                <div class="item">
-                    <div>Aulas</div>
-                    <div>
-                        <span>Presencial</span>
-                        <span>Distancia</span>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <div>Acompanhamento</div>
-                    <div>
-                        <span>Matematica</span>    
-                    </div>
-                </div>
-
-                <div class="item">
-                    <div>Desde</div>
-                    <div>01/01/2018</div>
-                </div>
-
-        </section>
-    </div>
-{% endblock content %}
-
+    <div class="card table-container">
+        <table width="100%">
+            <thead>
+                <tr>
+                    <th>Teachers</th>
+                    <th>Acompanhamento</th>
+                    <th>Ação</th>
+                </tr>
+            </thead>
+            <tbody>
+                {%for teacher in teachers%}
+                    <tr>
+                        <td>
+                            <span style="background-image: url({{teacher.avatar_url}})"></span>
+                            {{teacher.name}}
+                        </td>
+                        <td>{%for service in teacher.services%} <span>{{service}}</span> {%endfor%}</td>
+                        <td>
+                            <a href="/teachers/{{teacher.id}}">ver</a>
+                        </td>
+                    </tr>
+                    {%endfor%}
+                </tbody>
+            </table>
+        </div>
+    {% endblock content %}
