--- a/views/layout.njk
+++ b/views/layout.njk
@@ -4,13 +4,14 @@
             <title>Private school</title>
         {% endblock %}
         <link rel="stylesheet" href="/styles.css">
+
     </head>
 
     <body>
         <header>
             <div class="links">
-                <a href="/" class="active">Teachers</a>
-                <a href="/members">Students</a>                                    
+                <a href="/teachers">Teachers</a>
+                <a href="/students">Students</a>                                    
             </div>
         </header>
 
@@ -19,5 +20,6 @@
         {% endblock %}
 
     </body>
+    <script src="/scripts.js"></script>
 
 </html>
