--- a/public/styles.css
+++ b/public/styles.css
@@ -268,7 +268,8 @@ tbody tr td:first-child span{
     border: 2px solid white;
 }
 
-tbody tr td:last-child a{
+tbody tr td:last-child a,
+.table-container a{
     background-color: var(--primary-color);
     padding: 8px 16px;
     text-decoration: none;
@@ -294,4 +295,9 @@ td:last-child{
     font-weight: bold;
     text-transform: uppercase;
     font-size: 12px;
+}
+
+.table-container a{
+    margin-bottom: 12px;    
+    display: inline-block;
 }
