--- a/src/app/views/students/fields.njk
+++ b/src/app/views/students/fields.njk
@@ -31,37 +31,37 @@
     <div>
         <select name="select" class="select">
             <option value="5EF"
-            {% if student.select == "5EF" %}
+            {% if student.education_level == "5EF" %}
             selected
             {% endif %}
             >5º Ano Ensino Fundamental</option>
             <option value="6EF"
-            {% if student.select == "6EF" %}
+            {% if student.education_level == "6EF" %}
             selected
             {% endif %}
             >6º Ano Ensino Fundamental</option>
             <option value="7EF"
-            {% if student.select == "7EF" %}
+            {% if student.education_level == "7EF" %}
             selected
             {% endif %}
             >7º Ano Ensino Fundamental</option>
             <option value="8EF"
-            {% if student.select == "8EF" %}
+            {% if student.education_level == "8EF" %}
             selected
             {% endif %}
             >8º Ano Ensino Fundamental</option>
             <option value="1EM"
-            {% if student.select == "1EM" %}
+            {% if student.education_level == "1EM" %}
             selected
             {% endif %}
             >1º Ano Ensino Medio</option>
             <option value="2EM"
-            {% if student.select == "2EM" %}
+            {% if student.education_level == "2EM" %}
             selected
             {% endif %}
             >2º Ano Ensino Medio</option>
             <option value="3EM"
-            {% if student.select == "3EM" %}
+            {% if student.education_level == "3EM" %}
             selected
             {% endif %}
             >3º Ano Ensino Medio</option>
