--- a/src/app/views/students/index.njk
+++ b/src/app/views/students/index.njk
@@ -21,25 +21,25 @@
                         </td>
                         <td>{{student.email}}</td>
                         <td>
-                            {% if student.select == "5EF" %}
+                            {% if student.education_level == "5EF" %}
                             5º Ano Ensino Fundamental
                             {% endif %}   
-                            {% if student.select == "6EF" %}
+                            {% if student.education_level == "6EF" %}
                             6º Ano Ensino Fundamental
                             {% endif %}                                                    
-                            {% if student.select == "7EF" %}
+                            {% if student.education_level == "7EF" %}
                             7º Ano Ensino Fundamental
                             {% endif %}
-                            {% if student.select == "8EF" %}
+                            {% if student.education_level == "8EF" %}
                             8º Ano Ensino Fundamental
                             {% endif %}
-                            {% if student.select == "1EM" %}
+                            {% if student.education_level == "1EM" %}
                             1º Ano Ensino Medio
                             {% endif %}
-                            {% if student.select == "2EM" %}
+                            {% if student.education_level == "2EM" %}
                             2º Ano Ensino Medio
                             {% endif %}
-                            {% if student.select == "3EM" %}
+                            {% if student.education_level == "3EM" %}
                             3º Ano Ensino Medio
                             {% endif %}
                         </td>
