--- a/src/app/views/students/show.njk
+++ b/src/app/views/students/show.njk
@@ -30,7 +30,7 @@
             <div class="item">
                 <div>Ano atual</div>
                 <div>
-                    {{student.select}}
+                    {{student.education_level}}
                 </div>
             </div>
 
