Finalizado CRUD de todas entidades

--- a/src/app/views/students/show.njk
+++ b/src/app/views/students/show.njk
@@ -30,14 +30,14 @@
             <div class="item">
                 <div>Ano atual</div>
                 <div>
-                    {{student.education_level}}
+                    {{student.grade}}
                 </div>
             </div>
 
             <div class="item">
                 <div>Carga horária</div>
                 <div>
-                    {{student.carga}}
+                    {{student.workload}}
                 </div>
             </div>
 
