--- a/src/app/views/students/fields.njk
+++ b/src/app/views/students/fields.njk
@@ -29,39 +29,39 @@
 <div class="item">
     <div>Ano atual</div>
     <div>
-        <select name="select" class="select">
+        <select name="grade" class="select">
             <option value="5EF"
-            {% if student.education_level == "5EF" %}
+            {% if student.grade == "5EF" %}
             selected
             {% endif %}
             >5º Ano Ensino Fundamental</option>
             <option value="6EF"
-            {% if student.education_level == "6EF" %}
+            {% if student.grade == "6EF" %}
             selected
             {% endif %}
             >6º Ano Ensino Fundamental</option>
             <option value="7EF"
-            {% if student.education_level == "7EF" %}
+            {% if student.grade == "7EF" %}
             selected
             {% endif %}
             >7º Ano Ensino Fundamental</option>
             <option value="8EF"
-            {% if student.education_level == "8EF" %}
+            {% if student.grade == "8EF" %}
             selected
             {% endif %}
             >8º Ano Ensino Fundamental</option>
             <option value="1EM"
-            {% if student.education_level == "1EM" %}
+            {% if student.grade == "1EM" %}
             selected
             {% endif %}
             >1º Ano Ensino Medio</option>
             <option value="2EM"
-            {% if student.education_level == "2EM" %}
+            {% if student.grade == "2EM" %}
             selected
             {% endif %}
             >2º Ano Ensino Medio</option>
             <option value="3EM"
-            {% if student.education_level == "3EM" %}
+            {% if student.grade == "3EM" %}
             selected
             {% endif %}
             >3º Ano Ensino Medio</option>
@@ -73,7 +73,7 @@
 <div class="item">
     <div>Carga horária</div>
     <div>
-        <input type="number" name="carga" value="{{student.carga}}">
+        <input type="number" name="workload" value="{{student.workload}}">
     </div>
 </div>
 <button type="submit">Salvar</button>
