Relacionamento de tabelas PostgreSQL

--- a/src/app/views/students/fields.njk
+++ b/src/app/views/students/fields.njk
@@ -70,10 +70,27 @@
 </div>
 
 
+
 <div class="item">
     <div>Carga horária</div>
     <div>
         <input type="number" name="workload" value="{{student.workload}}">
+    </div>
+</div>
+
+<div class="item">
+    <div>Teacher</div>
+    <div>
+        <select name="teacher" class="select">
+            {%for teacher in teacherOptions%}
+            <option value="{{teacher.id}}"
+            {% if student.teacher_id == teacher.id %}
+            selected
+            {% endif %}>
+            {{teacher.name}}
+            </option>
+            {%endfor%} 
+        </select>
     </div>
 </div>
 <button type="submit">Salvar</button>
