--- a/src/app/views/teachers/index.njk
+++ b/src/app/views/teachers/index.njk
@@ -8,6 +8,7 @@
                 <tr>
                     <th>Teachers</th>
                     <th>Acompanhamento</th>
+                    <th>Alunos</th>
                     <th>Ação</th>
                 </tr>
             </thead>
@@ -19,6 +20,7 @@
                             {{teacher.name}}
                         </td>
                         <td>{%for subject in teacher.subjects_taught%} <span>{{subject}}</span> {%endfor%}</td>
+                        <td>{{teacher.total_students}}</td>
                         <td>
                             <a href="/teachers/{{teacher.id}}">ver</a>
                         </td>
