--- a/public/styles.css
+++ b/public/styles.css
@@ -67,7 +67,7 @@ header{
 
 .card{
     background-color: #fff;
-    width: 800px;
+    width: 960px;
     min-height: 420px;
     margin: 45px auto;
     display: grid;
@@ -205,6 +205,7 @@ a.button{
 }
 
 .error h1{
+      color: var(--secondary-color);
       font-size: 50px;
       display: inline-block;
       padding-right: 12px;
@@ -212,7 +213,7 @@ a.button{
 }
 
 @keyframes type{
-      from{box-shadow: inset -3px 0px 0px #999;}
+      from{box-shadow: inset -3px 0px 0px var(--secondary-color);}
       to{box-shadow: inset -3px 0px 0px transparent;}
 }
 
