--- a/src/app/views/students/show.njk
+++ b/src/app/views/students/show.njk
@@ -41,6 +41,13 @@
                 </div>
             </div>
 
+            <div class="item">
+                <div>Professor</div>
+                <div>
+                    {{student.teacher_name}}
+                </div>
+            </div>
+
             <a href="/students/{{student.id}}/edit" class="button">Editar</a>
         </section>
     </div>
