Paginação dinamica e filtro.

--- a/src/app/views/teachers/index.njk
+++ b/src/app/views/teachers/index.njk
@@ -2,7 +2,16 @@
 
 {% block content %}
     <div class="card table-container">
-        <a href="/teachers/create">Novo</a>
+        <div class="header">
+            <a href="/teachers/create" class="btnNew">Novo</a>
+            <form action="/teachers" method="GET">
+                <input type="text"
+                       name="filter"
+                       placeholder="Nome ou materia"
+                       value={{filter}}>
+                <button type="submit">Filtrar</button>
+            </form>
+        </div>
         <table width="100%">
             <thead>
                 <tr>
@@ -19,14 +28,22 @@
                             <span style="background-image: url({{teacher.avatar_url}})"></span>
                             {{teacher.name}}
                         </td>
-                        <td>{%for subject in teacher.subjects_taught%} <span>{{subject}}</span> {%endfor%}</td>
-                        <td>{{teacher.total_students}}</td>
                         <td>
-                            <a href="/teachers/{{teacher.id}}">ver</a>
-                        </td>
-                    </tr>
-                    {%endfor%}
-                </tbody>
-            </table>
-        </div>
-    {% endblock content %}
+                            {%for subject in teacher.subjects_taught%}
+                                <span>{{subject}}</span>
+                                {%endfor%}</td>
+                            <td>{{teacher.total_students}}</td>
+                            <td>
+                                <a href="/teachers/{{teacher.id}}">ver</a>
+                            </td>
+                        </tr>
+                        {%endfor%}
+                    </tbody>
+                </table>
+                <div class="pagination"
+                     data-page={{pagination.page}}
+                     data-total={{pagination.total}}
+                     data-filter={{filter}}>
+                </div>
+            </div>
+        {% endblock content %}
