--- a/public/styles.css
+++ b/public/styles.css
@@ -274,7 +274,7 @@ tbody tr td:first-child span{
 }
 
 tbody tr td:last-child a,
-.table-container a{
+.table-container .btnNew{
     background-color: var(--primary-color);
     padding: 8px 16px;
     text-decoration: none;
@@ -305,4 +305,71 @@ td:last-child{
 .table-container a{
     margin-bottom: 12px;    
     display: inline-block;
+}
+
+/* FILTERS */
+.table-container .header{
+    display: grid;
+    grid-template-columns: 1fr 1fr;    
+    align-items: center;
+    margin-bottom: 32px;
+}
+
+.table-container .header a{
+    margin: 0;
+    width: 100px;
+    text-align: center;
+}
+
+.table-container .header form{
+    display: grid;
+    grid-template-columns: 1fr 120px;
+    align-items: center;
+    grid-gap: 8px;
+}
+
+.table-container .header form input{
+    border: 1px solid #eee;
+    padding: 4px 8px;
+    box-sizing: border-box;
+}
+
+.table-container .header form button{
+    margin: 0;
+    width: 100%;
+    background-color: var(--primary-color);
+}
+
+/* PAGINATION */
+.table-container{
+    display: grid;
+    grid-template: 64px 1fr 16px / 1fr;
+}
+
+.table-container .header{
+    margin: 0;
+    align-self: start;
+}
+
+.table-container .pagination{
+    margin: 0;
+    /* align-self: end; */
+    justify-self: center;
+}
+
+.pagination a,
+.pagination span{
+    color: var(--primary-color);
+    text-decoration: none;
+    margin-right: 16px;
+}
+
+.pagination a:hover{
+    filter: brightness(0.3);
+    border-bottom: 1px solid var(--secondary-color);
+}
+
+.pagination a.active{
+    font-weight: bold;
+    color: var(--secondary-color);
 }
