--- a/src/app/views/students/index.njk
+++ b/src/app/views/students/index.njk
@@ -2,7 +2,16 @@
 
 {% block content %}
     <div class="card table-container">
-        <a href="/students/create">Novo</a>
+        <div class="header">        
+            <a href="/students/create" class="btnNew">Novo</a>
+            <form action="/students" method="GET">
+                <input type="text"
+                       name="filter"
+                       placeholder="Nome ou e-mail"
+                       value={{filter}}>
+                <button type="submit">Filtrar</button>
+            </form>
+        </div>
         <table width="100%">
             <thead>
                 <tr>
@@ -50,5 +59,10 @@
                     {%endfor%}
                 </tbody>
             </table>
+            <div class="pagination"
+                     data-page={{pagination.page}}
+                     data-total={{pagination.total}}
+                     data-filter={{filter}}>
+                </div>
         </div>
     {% endblock content %}
